# Codemble

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  NOTES.md  NOTICE  README.md  SECURITY.md  TESTING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  early_tester.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish-pypi.yml
.hallmark/: log.json  preflight.json
.remember/: now.md  recent.md  today-2026-07-19.md  today-2026-07-20.done.md  today-2026-07-20.md
.remember/tmp/: last-ndc.ts  last-save-ts  last-save.json
.superpowers/sdd/: progress.md
codemble/: __init__.py  cli.py  paths.py
codemble/adapters/: __init__.py  base.py  discovery.py  parse_progress.py  project.py  python_ast.py  typescript_tree_sitter.py
codemble/checks/: __init__.py  service.py
codemble/graph/: __init__.py  finalize.py  layout.py  mapview.py
codemble/lens/: __init__.py  javascript_typescript.py  python.py
codemble/llm/: __init__.py  local_status.py  providers.py  structural.py  study.py
codemble/progress/: __init__.py  store.py
codemble/server/: __init__.py  app.py  parse_job.py  project_activation.py  project_selection.py  runtime.py
codemble/web_dist/: index.html
codemble/web_dist/assets/: index-0OmvUbwQ.js  index-0x0j265G.js  index-AQPCbXek.js  index-B2tJmqEw.js  index-B92o0rVE.css  index-BAZKpK7T.js  index-BBC-ag63.css  index-BD26WWQS.js  index-BDdee6x5.js  index-BGVjO4Ax.css  index-BHcmQpjd.css  index-BNAOkzc9.css  index-BNNKIpEw.css  index-BQN86VEa.css  index-BT4nYqqu.css  index-BTHm0V7P.js  index-BUc1gGGZ.js  index-BV9vWF4W.js  index-BVYLNIyy.js  index-BWorxSL3.js  index-BXNmWXX-.css  index-BdkUJotH.css  index-BkwbhJPd.js  index-BlkEA_-c.js  (+66 more)
docs-site/: astro.config.mjs  design.md  package.json
docs-site/.hallmark/: log.json  preflight.json
docs-site/scripts/: build-plates.mjs
docs/adr/: README.md
docs/plans/: 2026-07-19-audience-modes-and-local-narration-design.md  2026-07-19-audience-modes-backend-plan.md  2026-07-19-audience-modes-frontend-plan.md  2026-07-19-install-ux-folder-picker-design.md  2026-07-19-install-ux-folder-picker-plan.md  2026-07-20-oss-inspired-map-and-constellations.md  README.md  phase-1.md
docs/releases/: checklist.md  v0.1.0.md  v0.2.0.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.5.3.md  v0.6.1.md  v0.6.2.md  v0.6.3.md  v0.6.4.md  v0.7.0.md
docs/research/: 2026-07-20-opensource-graph-architecture-inspiration.md  README.md
scripts/: dev.sh  record_demo.sh
tests/: conftest.py  test_checks.py  test_dependency_compatibility.py  test_graph_finalization.py  test_mapview.py  test_parse_job.py  test_parse_progress.py  test_progress.py  test_project_activation.py  test_project_parser.py  test_project_selection.py  test_providers.py  test_python_ast.py  test_server.py  test_smoke.py  test_structural.py  test_study.py  test_typescript_tree_sitter.py
tests/fixtures/: check_suites.json  concepts_sample.py  repeated_calls.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/scripts/: benchmark_learner_projection.mjs  check_focus_handoffs.mjs  check_galaxy_effects.mjs  check_graph_data.mjs  check_learner_projection.mjs  check_learner_session.mjs  check_map_viewport.mjs  check_mode_gate_portal.mjs  check_name_atlas.mjs  check_orbit_pointer_guard.mjs  check_project_mapping.mjs  record_demo.mjs
web/src/: App.jsx  GalaxyCanvas.jsx  GuidanceLayer.jsx  MapView.jsx  ModeControl.jsx  StudyPanel.jsx  galaxyEffects.js  galaxyMaterials.js  graphData.js  learnerProjection.js  learnerSession.js  main.jsx  mapViewport.js  nameAtlas.js  orbitPointerGuard.js  projectMapping.js  styles.css  tokens.css
workflows/: cinematic-public-site-refinement.md
(+61 files in other folders)
