[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codemble"
version = "0.6.1"
description = "A learning game that turns the code AI wrote for you into a galaxy you light up by understanding it."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Umang Dhawan", email = "umangdhawan97@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Environment :: Web Environment",
  "Topic :: Software Development :: Documentation",
  "Topic :: Education",
]
dependencies = [
  "fastapi>=0.115",
  # Hard upper bound, not caution: tree-sitter 0.26.0 segfaults (SIGSEGV in
  # node_get_named_children) against the newest published grammar wheels
  # (javascript 0.25.0, typescript 0.23.2), which are the only ones available.
  # Bisected on one env, one project: 0.26.0 crashes every run, 0.25.2 is clean.
  # Raise this only once a grammar release is verified against the newer core.
  "tree-sitter>=0.25,<0.26",
  "tree-sitter-javascript>=0.25,<0.26",
  "tree-sitter-typescript>=0.23.2,<0.24",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27"]

[project.scripts]
codemble = "codemble.cli:main"

[project.urls]
Homepage = "https://udhawan97.github.io/Codemble/"
Repository = "https://github.com/udhawan97/Codemble"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["tests/fixtures"]

[tool.hatch.build.targets.wheel]
packages = ["codemble"]
include = ["codemble/web_dist/**"]

[tool.hatch.build.targets.sdist]
exclude = [".remember", ".hallmark", ".claude", ".superpowers", "docs-site/node_modules", "web/node_modules"]
